fix:se soluciono el tema de kafka